# Only used for CLion intellisense for now
cmake_minimum_required(VERSION 4.0)
project(BrawlModules)

add_subdirectory(st_targetsmash)
add_subdirectory(st_village)
add_subdirectory(st_greenhill)
add_subdirectory(st_otrain)
add_subdirectory(st_starfox)
add_subdirectory(st_final)
add_subdirectory(st_stadium)
add_subdirectory(demos/st_demo)

add_subdirectory(demos/st_camera)
add_subdirectory(demos/st_effect)

add_subdirectory(custom/st_boss)
add_subdirectory(custom/st_bowsercastle)
add_subdirectory(custom/st_cheesebridge)
add_subdirectory(custom/st_finalsub)
add_subdirectory(custom/st_finkrat)
add_subdirectory(custom/st_ghosthouse)
add_subdirectory(custom/st_gimmick)
add_subdirectory(custom/st_gyromite)
add_subdirectory(custom/st_izumi)
add_subdirectory(custom/st_kingofthehill)
add_subdirectory(custom/st_kongojungleredux)
add_subdirectory(custom/st_krazoa)
add_subdirectory(custom/st_lava)
add_subdirectory(custom/st_lunarhorizon)
add_subdirectory(custom/st_phendrana)
add_subdirectory(custom/st_pictsimple)
add_subdirectory(custom/st_pointlessexpress)
add_subdirectory(custom/st_qbert)
add_subdirectory(custom/st_skypillar)
add_subdirectory(custom/st_skytower)
add_subdirectory(custom/st_smashketball)
add_subdirectory(custom/st_soup)
add_subdirectory(custom/st_templeoftime)
add_subdirectory(custom/st_warfactory)
add_subdirectory(custom/st_worldtournament)

